k8s-configs/ping-cloud/test/pingfederate/ingress.yaml
# This defines the ingress for other pingfederate services useful for test.

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederateconsole-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - pingfederateconsole-dev.ping-demo.com
    secretName: tls-secret
  rules:
  - host: pingfederateconsole-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the pingfederate admin console
        - path: /pingfederate
          backend:
            serviceName: pingfederate
            servicePort: 9999

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederateoauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - pingfederateoauth-dev.ping-demo.com
    secretName: tls-secret
  rules:
  - host: pingfederateoauth-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the pingfederate oauth playground
        - path: /OAuthPlayground
          backend:
            serviceName: pingfederate
            servicePort: 9031
